--- a/app/views/books/_form.html.haml
+++ b/app/views/books/_form.html.haml
@@ -20,6 +20,12 @@
       .field
         = f.label :summary
         = f.text_area :summary, class: "form-control"
+      .field
+        = f.label :isbn
+        = f.text_field :isbn, class: "form-control"
+      .field
+        = f.label :tag
+        = f.text_field :tag_list, class: "form-control"
       .actions
         = f.submit 'Save', class: "btn btn-primary"
         = link_to 'Back', root_path, class: "btn btn-link"
