--- a/app/views/users/lists/_form.html.haml
+++ b/app/views/users/lists/_form.html.haml
@@ -1,6 +1,6 @@
 .row    
   .col-md-4
-    = form_for @list do |f|
+    = form_for [@user, @list] do |f|
       - if @list.errors.any?
         #error_explanation
           %h2= "#{pluralize(@list.errors.count, "error")} prohibited this list from being saved:"
@@ -11,5 +11,8 @@
       .field
         = f.label :title
         = f.text_field :title, class: "form-control"
+      .field
+        = f.label :description
+        = f.text_field :description, class: "form-control"
       .actions
         = f.submit 'Save',  class: "btn btn-primary"
