--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,11 @@
 %h2= @user.email
-%h3= @user.role
+
+.row
+  .col-md-2
+    %ul.nav
+      %li= link_to "Lists", user_lists_path(@user)
+  .col-md-8
+    %h3= @user.role
 
 = link_to 'Edit', edit_user_path(@user)
 - if is_user_admin?
