--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -6,6 +6,9 @@
       by
       = @book.author
     %p
+      %strong isbn:
+      %em= @book.isbn
+      %br
       %em
         = @book.page_count
         pages
