--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -7,6 +7,7 @@
       %th Author
       %th ISBN
       %th Page count
+      %th Users
       - if is_user_admin?
         %th
         %th
@@ -18,6 +19,7 @@
         %td= book.author
         %td= book.isbn
         %td= book.page_count
+        %td= book.user_books.size
         - if is_user_admin?
           %td= link_to 'Edit', edit_book_path(book)
           %td= link_to 'Destroy', book, :method => :delete, :data => { :confirm => 'Are you sure?' }
