--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -1,28 +1,6 @@
 %h2 Books
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th Title
-      %th Author
-      %th ISBN
-      %th Page count
-      %th Users
-      - if is_user_admin?
-        %th
-        %th
-
-  %tbody
-    - @books.each do |book|
-      %tr
-        %td= link_to book.title, book
-        %td= book.author
-        %td= book.isbn
-        %td= book.page_count
-        %td= book.user_books.size
-        - if is_user_admin?
-          %td= link_to 'Edit', edit_book_path(book)
-          %td= link_to 'Destroy', book, :method => :delete, :data => { :confirm => 'Are you sure?' }
+= render "list"
 
 - if is_user_admin?
   %br
