Task 5, 6, & EC 1 - Users can write reviews - Ensures permissions work correctly for books, lists, genres, and reviews - Prevent users from writing multiple reviews for the same book

--- a/app/views/books/_list.html.haml
+++ b/app/views/books/_list.html.haml
@@ -8,6 +8,7 @@
           %th ISBN
           %th Page count
           %th Users
+          %th Avg. Rating
           - if is_user_admin?
             %th
             %th
@@ -20,6 +21,7 @@
             %td= book.isbn
             %td= book.page_count
             %td= book.user_books.size
+            %td= book.rating
             - if is_user_admin?
               %td= link_to 'Edit', edit_book_path(book)
               %td= link_to 'Destroy', book, :method => :delete, :data => { :confirm => 'Are you sure?' }
