--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -28,6 +28,15 @@
     %h4 Synopsis
     %p= @book.summary
 
+    %h4 Reviews
+    = render "books/reviews/list"
+
+    %br
+    - if current_user
+      = link_to 'New Review', new_book_review_path(@book), class: "btn btn-primary"
+    = link_to 'See All Reviews', book_reviews_path(@book), class: "btn btn-link"
+
+
 
   .col-md-3
     %h4 User Stats
