--- a/app/views/books/_form.html.haml
+++ b/app/views/books/_form.html.haml
@@ -13,7 +13,7 @@
         = f.text_field :title, class: "form-control"
       .field
         = f.label :author
-        = f.text_field :author, class: "form-control"
+        = f.collection_select :author, Author.all, {}, class: "form-control"
       .field
         = f.label :isbn
         = f.number_field :isbn, class: "form-control"
