--- a/app/views/books/_list.html.haml
+++ b/app/views/books/_list.html.haml
@@ -17,11 +17,11 @@
         - @books.each do |book|
           %tr
             %td= link_to book.title, book
-            %td= book.author
+            %td= link_to book.author.name, book.author
             %td= book.isbn
             %td= book.page_count
             %td= book.user_books.size
-            %td= book.rating
+            %td= book.rating.round(1)
             - if is_user_admin?
               %td= link_to 'Edit', edit_book_path(book)
               %td= link_to 'Destroy', book, :method => :delete, :data => { :confirm => 'Are you sure?' }
