--- a/app/views/books/reviews/_item.html.haml
+++ b/app/views/books/reviews/_item.html.haml
@@ -9,8 +9,8 @@
   - if can_manage_review?(review)
 
     %br
-    = link_to "Edit", edit_book_review_path(review.book, review)
+    = link_to "Edit", edit_book_review_path(review.reviewable, review)
     \|
-    = link_to "Delete", book_review_path(review.book, review), method: :delete, confirm: "Are you sure?"
+    = link_to "Delete", book_review_path(review.reviewable, review), method: :delete, confirm: "Are you sure?"
 
   %hr
