--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
         %nav.pull-left
           %ul.nav.nav-pills
             %li= link_to "Books", root_path
+            %li= link_to "Authors", authors_path
             - if is_user_admin?
               %li= link_to "Users", users_path
 
