--- a/app/views/users/reviews/index.html.haml
+++ b/app/views/users/reviews/index.html.haml
@@ -1,3 +1,16 @@
-%h3= "Book Reviews by #{@user.email}"
+%h3= "Reviews written by #{@user.email}"
 
-= render "books/reviews/list"
+
+%h4 For Books
+- if @book_reviews.size > 0
+  = render "reviews/list", reviews: @book_reviews
+- else
+  %p
+    %em No book reviews.
+
+%h4 For Authors
+- if @author_reviews.size > 0
+  = render "reviews/list", reviews: @author_reviews
+- else
+  %p
+    %em No book reviews.
