--- a/app/views/authors/_form.html.haml
+++ b/app/views/authors/_form.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-md-4
-    = form_for @author do |f|
+    = form_for @author, multipart: true do |f|
       - if @author.errors.any?
         #error_explanation
           %h2= "#{pluralize(@author.errors.count, "error")} prohibited this author from being saved:"
@@ -14,6 +14,11 @@
       .field
         = f.label :bio
         = f.text_area :bio, class: "form-control", rows: 5
+
+      .field
+        = f.label :picture
+        = f.file_field :picture
+
       .actions
         = f.submit 'Save', class: "btn btn-primary"
         = link_to 'Back', authors_path, class: "btn btn-link"
