--- a/app/views/authors/index.html.haml
+++ b/app/views/authors/index.html.haml
@@ -5,18 +5,24 @@
   = link_to 'New Author', new_author_path, class: "btn btn-primary"
 
 
-.row
-  .col-md-8
 
-    - @authors.each do |author|
 
-      %article
-        %h3= link_to author.name, author
-        %h4= pluralize author.books.size, "Book"
-        %p= author.bio
+- @authors.each do |author|
 
-        - if is_user_admin?
-          %td= link_to 'Edit', edit_author_path(author)
-          \|
-          %td= link_to 'Delete', author, :method => :delete, :data => { :confirm => 'Are you sure?' }
+  %article.row
+    .col-md-12
+      %h3= link_to author.name, author
+    .col-md-2
+      = image_tag author.picture.url(:thumb), width: 125
+
+    .col-md-10
+      %h4= pluralize author.books.size, "Book"
+      %p= author.bio
+
+      - if is_user_admin?
+        %td= link_to 'Edit', edit_author_path(author)
+        \|
+        %td= link_to 'Delete', author, :method => :delete, :data => { :confirm => 'Are you sure?' }
+
+
 
