--- a/app/views/authors/reviews/new.html.haml
+++ b/app/views/authors/reviews/new.html.haml
@@ -1,5 +1,5 @@
-%h2= "New Review for #{@authoe.title}"
+%h2= "New Review for #{@author.name}"
 
 = render 'form'
 
-= link_to 'Back', @authoe
+= link_to 'Back', @author
